# POZZ

./: .env_example  .gitignore  README.md  app.py  check_tunnel_status.sh  monitor.sh  pozz-monitor.service  pyproject.toml  start_up.sh  start_with_monitor.sh  stop.sh  stop_all.sh  test_aws_secrets.py
diarization_test/: README.md  env.example.txt  requirements.txt  test_chunking_gradio.py  test_chunking_gradio_diarization.py
modules/: __init__.py  audio_processor.py  config.py  db.py  interview_recorder.py  llm_service.py  prompt_manager.py
